test_outputs/connlist/exposure_test_with_anp_5_entire_cluster_example_explain_exposure_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment]:

Allowed connections:
	Allowed TCP:[1-79,81-65535], UDP, SCTP due to the system default (Allow all)

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Denied)
			AdminNetworkPolicy 'exposure-deny-with-entire-cluster-example' denies connections by Egress rule deny-tcp80-egress-to-entire-cluster
		Ingress (Denied)
			AdminNetworkPolicy 'exposure-deny-with-entire-cluster-example' denies connections by Ingress rule deny-tcp80-ingress-from-entire-cluster

----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment]:

Allowed connections:
	Allowed TCP:[1-79,81-65535], UDP, SCTP due to the system default (Allow all)

Denied connections:
	Denied TCP:[80] due to the following policies and rules:
		Egress (Denied)
			AdminNetworkPolicy 'exposure-deny-with-entire-cluster-example' denies connections by Egress rule deny-tcp80-egress-to-entire-cluster
		Ingress (Denied)
			AdminNetworkPolicy 'exposure-deny-with-entire-cluster-example' denies connections by Ingress rule deny-tcp80-ingress-from-entire-cluster


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255[External] => hello-world/workload-a[Deployment]
0.0.0.0-255.255.255.255[External] => hello-world/workload-b[Deployment]
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255[External]
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255[External]

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] 	=> 	entire-cluster : SCTP 1-65535,TCP 1-79,81-65535,UDP 1-65535
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : SCTP 1-65535,TCP 1-79,81-65535,UDP 1-65535

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] 	<= 	entire-cluster : SCTP 1-65535,TCP 1-79,81-65535,UDP 1-65535
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : SCTP 1-65535,TCP 1-79,81-65535,UDP 1-65535
